--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/megxsan/CS546AnimalShelterWebsite/tree/development#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mongodb": "^5.2.0"
   }
 }
