--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/megxsan/CS546AnimalShelterWebsite/tree/development#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "mongodb": "^5.2.0"
   }
 }
