--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "546-project",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "type": "module",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/megxsan/CS546AnimalShelterWebsite.git#development"
-  },
-  "author": "Facundo Rechter 10462957",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/megxsan/CS546AnimalShelterWebsite/issues"
-  },
-  "homepage": "https://github.com/megxsan/CS546AnimalShelterWebsite/tree/development#readme",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
-    "mongodb": "^5.2.0"
-  }
+	"name": "546-project",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"type": "module",
+	"scripts": {
+		"start": "node app.js",
+		"seed": "node seed.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/megxsan/CS546AnimalShelterWebsite.git#development"
+	},
+	"author": "Facundo Rechter 10462957",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/megxsan/CS546AnimalShelterWebsite/issues"
+	},
+	"homepage": "https://github.com/megxsan/CS546AnimalShelterWebsite/tree/development#readme",
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"express": "^4.18.2",
+		"express-handlebars": "^7.0.7",
+		"mongodb": "^5.2.0"
+	}
 }
