--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 	"homepage": "https://github.com/megxsan/CS546AnimalShelterWebsite/tree/development#readme",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"bcryptjs": "^2.4.3",
 		"express": "^4.18.2",
 		"express-handlebars": "^7.0.7",
+		"express-session": "^1.17.3",
 		"mongodb": "^5.2.0"
 	}
 }
