--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
 		"express": "^4.18.2",
 		"express-handlebars": "^7.0.7",
 		"express-session": "^1.17.3",
-		"mongodb": "^5.2.0"
+		"mongodb": "^5.2.0",
+		"@aws-sdk/client-s3": "^3.298.0",
+		"@aws-sdk/lib-storage": "^3.298.0",
+		"dotenv": "^16.0.3",
+		"formidable": "^2.1.1"
 	}
 }
