--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"type": "git",
 		"url": "git+https://github.com/megxsan/CS546AnimalShelterWebsite.git#development"
 	},
-	"author": "Facundo Rechter 10462957",
+	"author": "Facundo Rechter, Megan Sanford, Olivia Eng, Tyler Lane",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/megxsan/CS546AnimalShelterWebsite/issues"
